# stock_market_backend

./: .env_sample  .gitignore  README.md  create_app.sh  main.py  pyproject.toml  requirements.txt
apps/authentication/: __init__.py  managers.py  urls.py
apps/authentication/migrations/: 0001_initial.py  0002_userprofile_stock.py
apps/authentication/models/: __init__.py  custom_user.py  profile.py
apps/authentication/serializers/: __init__.py  login.py  logout.py  signup.py  user_profile.py
apps/authentication/views/: __init__.py  login.py  logout.py  signup.py  user_profile.py
apps/notifications/: __init__.py  celery_tasks.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_remove_notification_user_notification_user.py  0003_remove_notification_is_read_and_more.py  0004_notification_user.py
apps/stock/: admin.py  models.py  urls.py
apps/stock/migrations/: 0001_initial.py
apps/stock/serializers/: __init__.py  stock.py  watchlist.py
apps/stock/views/: __init__.py  stock.py  watchlist.py
base/: serializers.py  urls.py
base/api_urls/v1/: urls.py
base/views/: __init__.py  generic_views.py  views.py
stock_market_backend/: __init__.py  asgi.py  celery_app.py  celery_settings.py  patterns.py  rest.py  settings.py  simple_jwt.py  spectacular.py  urls.py  wsgi.py
